--- a/index.html
+++ b/index.html
@@ -52,21 +52,21 @@
             <li data-target="#myCarousel" data-slide-to="1"></li>
         </ol>
         <div class="carousel-inner">
-            <!-- <div class="h-[32rem] bg-[#777] relative ">
-                <div class="absolute b-0 l-0 r-0 pb-50px">
-                    <h1>example headline</h1>
-                    <p>Bootstrap is developed mobile first, a strategy in which we optimize code for mobile devices first and then scale up components as necessary using CSS media queries. To ensure proper rendering and touch zooming for all devices, add the responsive viewport meta tag to your</p>
-                    <a href="#" class="btn btn-lg btn-primary">Sign up today</a>
-                </div>
-            </div> -->
-            <!-- <div class="h-[32rem] bg-[#777] relative ">
+            <div class="h-[32rem] bg-[#777] relative ">
                 <div class="absolute b-0 l-0 r-0 pb-50px">
                     <h1>example headline</h1>
                     <p>Bootstrap is developed mobile first, a strategy in which we optimize code for mobile devices first and then scale up components as necessary using CSS media queries. To ensure proper rendering and touch zooming for all devices, add the responsive viewport meta tag to your</p>
                     <a href="#" class="btn btn-lg btn-primary">Sign up today</a>
                 </div>
             </div>
-             -->
+            <div class="h-[32rem] bg-[#777] relative ">
+                <div class="absolute b-0 l-0 r-0 pb-50px">
+                    <h1>example headline</h1>
+                    <p>Bootstrap is developed mobile first, a strategy in which we optimize code for mobile devices first and then scale up components as necessary using CSS media queries. To ensure proper rendering and touch zooming for all devices, add the responsive viewport meta tag to your</p>
+                    <a href="#" class="btn btn-lg btn-primary">Sign up today</a>
+                </div>
+            </div>
+            
         </div>
     </div>
   
