--- a/form1.html
+++ b/form1.html
@@ -115,6 +115,8 @@
                 <label for="city-input" class="text-[#1b263b] font-bold mb-2  ">Your city</label>
                 <select id="city-input" class="rounded-lg px-4 py-2 w-full border border-gray-200">
                     <option value="">Select your city</option>
+                    <option value="bhopal">Bhopal</option>
+                    <option value="indore">Indore</option>
                     <option value="delhi">Delhi</option>
                     <option value="mumbai">Mumbai</option>
                     <option value="bangalore">Bangalore</option>
