--- a/form1.html
+++ b/form1.html
@@ -64,7 +64,7 @@
                     </div>
 
                     <!-- music-events  -->
-                    <div class="bg-white text-[#1b263b] font-semibold rounded-lg px-4 py-2 hover:bg-blackcursor-pointer flex flex-col items-center justify-center transition-all duration-[600ms] hover:translate-y-[-5px] hover:text-[#778da9]" data-purpose="music-events" id="music-events" name="music-events" >
+                    <div class="bg-white text-[rgb(27,38,59)] font-semibold rounded-lg px-4 py-2 hover:bg-blackcursor-pointer flex flex-col items-center justify-center transition-all duration-[600ms] hover:translate-y-[-5px] hover:text-[#778da9]" data-purpose="music-events" id="music-events" name="music-events" >
                         <img src="static/img/music-events.jpg" class="mb-2">
                         Music Events
                     </div>
