fixed learn more

--- a/index1.html
+++ b/index1.html
@@ -60,7 +60,7 @@
                   <div class="carousel-caption">
                       <h5>Music Festival</h5>
                       <p>Music Brings people together, So when you are coming to this show.</p>
-                      <p><a href="#" class="btn btn-warning mt-3">Learn more</a></p>
+                      <!-- <p><a href="#" class="btn btn-warning mt-3">Learn more</a></p> -->
                   </div>
               </div>
               <div class="carousel-item ">
@@ -68,7 +68,7 @@
                   <div class="carousel-caption">
                       <h5>Workshop</h5>
                       <p>Workshop gave us the practical knowledge about things, Fast grab Your Seats</p>
-                      <p><a href="#" class="btn btn-warning mt-3">Learn more</a></p>
+                      <!-- <p><a href="#" class="btn btn-warning mt-3">Learn more</a></p> -->
                   </div>
               </div>
               <div class="carousel-item ">
@@ -76,7 +76,7 @@
                   <div class="carousel-caption">
                       <h5>Social Gathering</h5>
                       <p>Social gathering increases knowledge of ourselves. This helps us socialize.</p>
-                      <p><a href="#" class="btn btn-warning mt-3">Learn more</a></p>
+                      <!-- <p><a href="#" class="btn btn-warning mt-3">Learn more</a></p> -->
                   </div>
               </div>
           </div>
